# kahlus-bench

./: .gitignore  CITATION.cff  LICENSE  PRE_REGISTRATION.md  README.md  pyproject.toml
kahlus_bench/: __init__.py  contract.py  run.py  sweep.py
kahlus_bench/methods/: __init__.py  baselines.py  neuroforecast_adapter.py
kahlus_bench/outputs/: sweep_results.csv  sweep_run_meta.json  sweep_summary.csv
kahlus_bench/scoring/: __init__.py  sealed.py
kahlus_bench/synthetic/: __init__.py  ground_truth.py
tests/: test_neuroforecast_integration.py  test_smoke.py
